[project]
name = "cozy-memory"
version = "0.1.0"
description = "Unified memory system: Redis (cache) + Vector (semantic) + Search (keyword) + libSQL (persistence)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "redis>=5.0.0",
    "upstash-vector>=0.4.0",
    "upstash-redis>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
libsql = ["libsql-experimental>=0.0.40"]
all = ["cozy-memory[libsql]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
